# pyweb_module_7

test_project/: config.ini  my_select.py  pyproject.toml
test_project/migrations/: env.py
test_project/migrations/versions/: 3c67ae257751_initialization.py  8e0d0aad6b73_queries.py
test_project/src/: database.py  models.py  seed.py
